fix : pomodro overlap on navbar

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -3,6 +3,7 @@
   top: 0;
   height: revert;
   box-shadow: 0 5px 10px var(--box-shadow);
+  z-index: 1;
 }
 .nav-menu-logo {
   font-weight: bold;
